[gd_scene load_steps=9 format=3 uid="uid://bb4gfxugjil5j"]

[ext_resource type="Script" uid="uid://dolx4j42vv5ot" path="res://player.gd" id="1_f3sb7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fj7yv"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_tlwt5"]
sky_material = SubResource("ProceduralSkyMaterial_fj7yv")

[sub_resource type="Environment" id="Environment_aqk2v"]
background_mode = 2
sky = SubResource("Sky_tlwt5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_036b0"]

[sub_resource type="GDScript" id="GDScript_f3sb7"]
script/source = "extends MeshInstance3D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f3sb7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f3sb7"]
albedo_color = Color(0, 1, 0, 1)

[node name="World" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aqk2v")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_f3sb7")

[node name="Body" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.496459, 0)
mesh = SubResource("CapsuleMesh_036b0")
script = SubResource("GDScript_f3sb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.496459, 0)
shape = SubResource("CapsuleShape3D_f3sb7")

[node name="Head" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9963981, 0)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Head"]

[node name="ledge_check" type="Node3D" parent="CharacterBody3D/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.9963981, 0)

[node name="above_ledge" type="RayCast3D" parent="CharacterBody3D/Head/Camera3D/ledge_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.936002, 0)
target_position = Vector3(0, 0, 0.75)
collide_with_areas = true

[node name="below_ledge" type="RayCast3D" parent="CharacterBody3D/Head/Camera3D/ledge_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9673054, 0)
target_position = Vector3(0, 0, 0.75)
collide_with_areas = true

[node name="CSGBox3D" type="CSGBox3D" parent="."]
material_override = SubResource("StandardMaterial3D_f3sb7")
use_collision = true
size = Vector3(66.1709, 1, 83.91382)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0021675, 11.418732)
use_collision = true
size = Vector3(5.3964844, 5.0097656, 4.9853516)

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.936736, 2.051821, 11.334057)
use_collision = true
size = Vector3(5.3964844, 3.1154785, 4.9853516)

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.9214945, 1.2312028, 4.1059103)
use_collision = true
size = Vector3(5.3964844, 1.4742432, 4.9853516)
